# feelelf

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  elf.cpp  elf.h  main.cpp  readme.md
cmake/: feelelf.pc.in
demo/: main.cpp
examples/: main.cpp
include/feelelf/: feelelf.h
src/: feelelf.cpp
